--- a/index.html
+++ b/index.html
@@ -2,9 +2,55 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./public/app.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-app</title>
+
+    <!-- Primary SEO -->
+    <title>startflyerads — Digital Marketing Agency | Grow Your Business</title>
+    <meta name="description" content="startflyerads is a results-driven digital marketing agency offering SEO, PPC, social media, web design and content strategy to help businesses scale and acquire more customers." />
+    <meta name="keywords" content="startflyerads, digital marketing, SEO, PPC, social media, web design, content marketing, lead generation" />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://startflyerads.com/" />
+
+    <!-- Open Graph / Social -->
+    <meta property="og:title" content="startflyerads — Digital Marketing Agency" />
+    <meta property="og:description" content="Get data-driven digital marketing: SEO, PPC, social, and web design from startflyerads to grow your business." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://startflyerads.com/" />
+    <meta property="og:image" content="https://startflyerads.com/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="startflyerads — Digital Marketing Agency" />
+    <meta name="twitter:description" content="Get data-driven digital marketing: SEO, PPC, social and web design from startflyerads to grow your business." />
+    <meta name="twitter:image" content="https://startflyerads.com/og-image.png" />
+
+    <!-- Theme & mobile -->
+    <meta name="theme-color" content="#2A2A42" />
+    <meta name="mobile-web-app-capable" content="yes" />
+
+    <!-- JSON-LD Organization (basic) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "startflyerads",
+        "url": "https://startflyerads.com",
+        "logo": "https://startflyerads.com/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/startflyerads",
+          "https://twitter.com/startflyerads",
+          "https://www.linkedin.com/company/startflyerads"
+        ],
+        "contactPoint": [{
+          "@type": "ContactPoint",
+          "telephone": "+1-555-123-4567",
+          "contactType": "customer service",
+          "areaServed": "GLOBAL",
+          "availableLanguage": "English"
+        }]
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
