--- a/index.html
+++ b/index.html
@@ -6,27 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Primary SEO -->
-    <title>startflyerads — Digital Marketing Agency | Grow Your Business</title>
-    <meta name="description" content="startflyerads is a results-driven digital marketing agency offering SEO, PPC, social media, web design and content strategy to help businesses scale and acquire more customers." />
-    <meta name="keywords" content="startflyerads, digital marketing, SEO, PPC, social media, web design, content marketing, lead generation" />
+    <title>HK Local Tours — Discover the Authentic, Wild Hong Kong</title>
+    <meta name="description" content="Explore Hong Kong's trails with sustainable and personalized walking tours. Connecting travelers with the wild side of HK through professional local guidance." />
+    <meta name="keywords" content="HK Local Tours, Hong Kong hiking, sustainable tourism HK, local walking tours, Hong Kong nature, personalized hikes" />
     <meta name="robots" content="index, follow" />
-    <link rel="canonical" href="https://startflyerads.com/" />
+    <link rel="canonical" href="https://hklocaltours.com/" />
 
     <!-- Open Graph / Social -->
-    <meta property="og:title" content="startflyerads — Digital Marketing Agency" />
-    <meta property="og:description" content="Get data-driven digital marketing: SEO, PPC, social, and web design from startflyerads to grow your business." />
+    <meta property="og:title" content="HK Local Tours — Authentic Hong Kong Hikes" />
+    <meta property="og:description" content="Discover the wild side of Hong Kong with personalized, sustainable hiking tours led by expert local guides." />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://startflyerads.com/" />
-    <meta property="og:image" content="https://startflyerads.com/og-image.png" />
+    <meta property="og:url" content="https://hklocaltours.com/" />
+    <meta property="og:image" content="https://hklocaltours.com/og-image.png" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="startflyerads — Digital Marketing Agency" />
-    <meta name="twitter:description" content="Get data-driven digital marketing: SEO, PPC, social and web design from startflyerads to grow your business." />
-    <meta name="twitter:image" content="https://startflyerads.com/og-image.png" />
+    <meta name="twitter:title" content="HK Local Tours — Authentic Hong Kong Hikes" />
+    <meta name="twitter:description" content="Sustainable and personalized hiking tours in the heart of Hong Kong's wilderness." />
+    <meta name="twitter:image" content="https://hklocaltours.com/og-image.png" />
 
     <!-- Theme & mobile -->
-    <meta name="theme-color" content="#2A2A42" />
+    <meta name="theme-color" content="#1a2e1a" />
     <meta name="mobile-web-app-capable" content="yes" />
 
     <!-- JSON-LD Organization (basic) -->
@@ -34,20 +34,16 @@
       {
         "@context": "https://schema.org",
         "@type": "Organization",
-        "name": "startflyerads",
-        "url": "https://startflyerads.com",
-        "logo": "https://startflyerads.com/logo.png",
-        "sameAs": [
-          "https://www.facebook.com/startflyerads",
-          "https://twitter.com/startflyerads",
-          "https://www.linkedin.com/company/startflyerads"
-        ],
+        "name": "HK Local Tours",
+        "url": "https://hklocaltours.com",
+        "logo": "https://hklocaltours.com/logo.png",
+        "description": "Connecting travelers with the authentic, wild side of Hong Kong through sustainable and personalized walking tours.",
         "contactPoint": [{
           "@type": "ContactPoint",
-          "telephone": "+1-555-123-4567",
+          "telephone": "+852-XXXX-XXXX",
           "contactType": "customer service",
-          "areaServed": "GLOBAL",
-          "availableLanguage": "English"
+          "areaServed": "HK",
+          "availableLanguage": "English, Chinese"
         }]
       }
     </script>
